crates/tokmd-fun/tests/snapshots/snapshot_fun_w50__snapshot_midi_chord.snap
---
source: crates/tokmd-fun/tests/snapshot_fun_w50.rs
expression: "hex.join(\" \")"
---
4d 54 68 64 00 00 00 06 00 00 00 01 01 e0 4d 54 72 6b 00 00 00 20 00 ff 51 03 0a 2c 2a 00 90 3c 50 00 40 50 00 43 50 87 40 80 3c 00 00 40 00 00 43 00 00 ff 2f 00
