crates/tokmd-fun/tests/snapshots/snapshot_fun_w50__snapshot_obj_special_name.snap
---
source: crates/tokmd-fun/tests/snapshot_fun_w50.rs
expression: output
---
# tokmd code city
o C____embedded_
v 0 0 0
v 2 0 0
v 2 2 0
v 0 2 0
v 0 0 3
v 2 0 3
v 2 2 3
v 0 2 3
f 1 2 3 4
f 5 6 7 8
f 1 2 6 5
f 2 3 7 6
f 3 4 8 7
f 4 1 5 8
